# HourTrack

./: .gitignore  README.md  pyproject.toml  requirements.txt
.github/workflows/: release.yml
src/hourtrack/: __init__.py  hourtrack.py
src/hourtrack/.github/workflows/: python-publish.yml
src/hourtrack/utils/: argument_parser.py  config.py  helpers.py  logger.py  project_manager.py
src/hourtracker/: __init__.py  tracker.py
src/hourtracker/utils/: logger.py  project_manager.py
